--- a/client/views/postList.html
+++ b/client/views/postList.html
@@ -29,184 +29,12 @@
     <script src="../js/jquery-3.2.1.min.js"></script>
     
     <!-- Adds Moon -->
-    <script src="https://unpkg.com/moonjs"></script>
-  
-    <!-- JavaScript to load the contents of the page -->
-    <script>
-      /*global $*/
-      // Function to load the contents of the page
-      function loadPage() {
-        var id = window.location.href.split("=")[1];
-        Promise.resolve()
-        .then(() => {
-          return $.post('/server/searchProfile.php', {user: id});
-        })
-        .then((post) => {
-          setUserProfile(post);
-        })
-      }
-      
-      // Function to set the user profile
-      function setUserProfile(post) {
-        var userProfile = post[0];
-        $('#displayName').html(userProfile.displayName);
-        $('#profileImage').attr("src","../img/profile_img/" + userProfile.imageProfile);
-        $('#postCount').html(userProfile.postsCount);
-        $('#followerCount').html(userProfile.followersCount);
-        $('#followingCount').html(userProfile.followingCount);
-        addUserGallery(userProfile);
-        setUserGalleryContent(userProfile);
-      }
-      
-      // Function to add Gallery of user recent post to the Gallery Container
-      function addUserGallery(userProfile) {
-        $('#galleryContainer').append('<div class="gallery">\
-          <div class="gallery_upper">\
-            <img src="" height="50px" class="profile" id="userProfileImage">\
-            <h4>\
-            <a href="/client/views/postList.html?id='+userProfile.ID+'" style="text-decoration: none; font-size: 25px;color: aliceblue;"><span id="userProfileUsername"></span></a> \
-              <img alt="verified" src="../img/icons/icon4.png">\
-              <p id="userProfileFullName"></p>\
-            </h4>\
-          </div>\
-          <div id="postContainer' + userProfile.ID + '">\
-          </div>\
-        </div>');
-        addUserPosts(userProfile);
-      }
-      
-      // Function to set content of User Upper Gallery
-      function setUserGalleryContent(userProfile) {
-        $('#userProfileImage').attr("src","../img/profile_img/" + userProfile.imageProfile);
-        $('#userProfileUsername').html(userProfile.displayName);
-        $('#userProfileFullName').html(userProfile.firstName + ' ' + userProfile.lastName);
-      }
-      
-      // Function to add user Recent Posts html to Post Container
-      function addUserPosts(userProfile) {
-        for (var j = 0; j < userProfile.postsCount; j++) {
-          $('#postContainer' + userProfile.ID).append('<div class="thumbnail">\
-              <a href="" id="link' + userProfile.ID + j + '">\
-                <img src="" class="cards" id="thumbnail' + userProfile.ID + j +'"/>\
-              </a>\
-              <h4>\
-                <img src="../img/icons/icon2.png" id="like' + userProfile.ID + j +'"  height="15px" alt="Likes">\
-                <i id="popularity' + userProfile.ID + j +'"></i>\
-                <img src="../img/icons/icon5.png" id="feedback' + userProfile.ID + j +'"  height="15px" alt="Feedbacks">\
-                <i id="feedbackCount' + userProfile.ID + j +'"></i>\
-              </h4>\
-              <p class="text_column" id="status' + userProfile.ID + j +'"></p>\
-              <p class="tag" id="hastag' + userProfile.ID + j +'"></p>\
-            </div>');
-          setPostsContent(userProfile.ID, j, userProfile.postsCount);
-        }
-      }
-    
-      // Function to set content of Posts
-      function setPostsContent(id, j, max) {
-        Promise.resolve()
-        .then(() => {
-          return $.post('/server/getPostsContent.php', {id: id, max: max});
-        })
-        .then((posts) => {
-          var postsContent = posts;
-          $("#link" + id + j).attr('href', '/client/views/postDetails.html?id=' + postsContent[j].ID)
-          $('#thumbnail' + id + j).attr("src","../img/instagram_img/" + postsContent[j].image);
-         
-          var postid = postsContent[j].ID;
-          var likeCountTag = "popularity" + id + j;
-          
-          var likeIconIDTag = "like" + id + j;
-          isLike(postid, likeIconIDTag, likeIconIDTag);
-          
-          $('#like' + id + j).attr('onclick','likeClick("' + postid + '", "' + likeCountTag +'","' + likeIconIDTag + '")');
-          $('#popularity' + id + j).html(postsContent[j].likeCount);
-          $('#feedbackCount' + id + j).html(postsContent[j].feedbackCount);
-          $('#status' + id + j).html(postsContent[j].status);
-          $('#hastag' + id + j).html(postsContent[j].hashTag);
-        });
-      }
-      
-      /*handle a click on the LIKE button we've included with each post
-        we receive the ID of the post as a parameter */
-      function likeClick(id, likeCounttag, likeIconTag) {
-        Promise.resolve()
-        .then(function() {
-            /*here we pass the ID to the incrLike route on the server side so it can do the incrementing for us
-            //note the return. This MUST be here, or the subsequent then will not wait for this to complete */
-           return $.post('/server/server.php', 'type=increLike' + '&id=' + id);
-        })
-        .then(function(like) {
-          if (like.count > 0) {
-            //jQuery provides a nice convenience method for easily setting the count to the value returned
-            $('#' + likeCounttag).html(like.count);
-          }
-          if (like.result) {
-            $('#' + likeIconTag).attr('src','../img/icons/Like.png');
-          }
-          else {
-            $('#' + likeIconTag).attr('src','../img/icons/icon2.png');
-          }
-        })
-        .catch(function(err) {
-            //always include a catch for the promise chain
-        });
-      }
-
-      function isLike(postID, likeIconID) {
-        Promise.resolve()
-        .then(function() {
-          return $.post('/server/server.php', 'type=isLike' + '&id=' + postID);
-        })
-        .then(function(resonse) {
-          if(resonse.result) {
-            $('#' + likeIconID).attr("src","../img/icons/Like.png");
-          }
-        })
-      }
-      
-      /*handle a click on the Follow button 
-        we receive the ID of user as a parameter */
-      function followerClick(followButtonID, followUserID) {
-        Promise.resolve()
-        .then(function(){
-          return $.post('/server/server.php', 'type=incrFollow' + '&followid=' + followUserID);
-        })
-        .then(function(user) {
-          if (user.followingCount > 0) {
-              $('#followingCount').html(user.followingCount);
-          }
-          if (user.result) {
-              $('#' + followButtonID).html('Following');
-          }
-          else {
-              $('#' + followButtonID).html('Follow');
-          }
-        })
-        .catch(function(err) {
-            //always include a catch for the promise chain
-        });
-      }
-      
-      // Check whether the user is followed or not in order to display following button
-      function isFollow(followButtonID, followUserID) {
-        Promise.resolve()
-        .then(function() {
-          return $.post('/server/server.php', 'type=isFollow' + '&followid=' + followUserID);
-        })
-        // Display as following 
-        .then(function(response){
-          if(response.result) {
-           $('#' + followButtonID).html('Following');
-          }
-        })
-      }
-    </script>
+    <script src="https://unpkg.com/moonjs/dist/moon.js"></script>
   </head>
-  <body onload="loadPage();">
+  <body>
     
     <!-- Main Container -->
-    <div class="container"> 
+    <div id="main" class="container"> 
     
       <!-- Header Section-->
       <header id="header" class="header"></header>
@@ -251,5 +79,229 @@
         });
       </script> 
     </div>
+    <script>
+      /*global Moon*/
+      /*global $*/
+      const app = new Moon({
+      el: "#main",
+      data: {
+      },
+      methods: {
+        loadPage: function() {
+          var id = window.location.href.split("=")[1];
+          Promise.resolve()
+          .then(() => {
+            return $.post('/server/searchProfile.php', {user: id});
+          })
+          .then((post) => {
+            setUserProfile(post[0]);
+          })
+        },
+        setUserProfile: function(userProfile) {
+          $('#displayName').html(userProfile.displayName);
+          $('#profileImage').attr("src","../img/profile_img/" + userProfile.imageProfile);
+          $('#postCount').html(userProfile.postsCount);
+          $('#followerCount').html(userProfile.followersCount);
+          $('#followingCount').html(userProfile.followingCount);
+          addUserGallery(userProfile);
+          setUserGalleryContent(userProfile);
+        },
+        addUserGallery: function(userProfile, postsCount) {
+          $('#galleryContainer').append('<div class="gallery">\
+            <div class="gallery_upper">\
+              <img src="" height="50px" class="profile" id="userProfileImage">\
+              <h4>\
+              <a href="/client/views/postList.html?id='+userProfile.ID+'" style="text-decoration: none; font-size: 25px;color: aliceblue;"><span id="userProfileUsername"></span></a> \
+                <img alt="verified" src="../img/icons/icon4.png">\
+                <p id="userProfileFullName"></p>\
+              </h4>\
+            </div>\
+            <div id="postContainer' + userProfile.ID + '">\
+            </div>\
+          </div>');
+          addUserPosts(userProfile);
+        },
+        setUserGalleryContent: function(userProfile) {
+          $('#userProfileImage').attr("src","../img/profile_img/" + userProfile.imageProfile);
+          $('#userProfileUsername').html(userProfile.displayName);
+          $('#userProfileFullName').html(userProfile.firstName + ' ' + userProfile.lastName);
+        },
+        addUserPosts: function(userProfile, postsCount) {
+          for (var j = 0; j < userProfile.postsCount; j++) {
+            $('#postContainer' + userProfile.ID).append('<div class="thumbnail">\
+                <a href="" id="link' + userProfile.ID + j + '">\
+                  <img src="" class="cards" id="thumbnail' + userProfile.ID + j +'"/>\
+                </a>\
+                <h4>\
+                  <img src="../img/icons/icon2.png" id="like' + userProfile.ID + j +'"  height="15px" alt="Likes">\
+                  <i id="popularity' + userProfile.ID + j +'"></i>\
+                  <img src="../img/icons/icon5.png" id="feedback' + userProfile.ID + j +'"  height="15px" alt="Feedbacks">\
+                  <i id="feedbackCount' + userProfile.ID + j +'"></i>\
+                </h4>\
+                <p class="text_column" id="status' + userProfile.ID + j +'"></p>\
+                <p class="tag" id="hastag' + userProfile.ID + j +'"></p>\
+              </div>');
+            setPostsContent(userProfile.ID, j, userProfile.postsCount);
+          }
+        },
+        addPosts: function(topProfiles, i) {
+          for (var j = 0; j < 4; j++) {
+            $('#postContainer' + topProfiles[i].ID).append('<div class="thumbnail">\
+                <a href="" id="link' + topProfiles[i].ID + j + '">\
+                  <img src="" class="cards" id="thumbnail' + topProfiles[i].ID + j +'"/>\
+                </a>\
+                <h4>\
+                  <img src="../img/icons/icon2.png" id="like' + topProfiles[i].ID + j +'"  height="15px" alt="Likes">\
+                  <i id="popularity' + topProfiles[i].ID + j +'"></i>\
+                  <img src="../img/icons/icon5.png" id="feedback' + topProfiles[i].ID + j +'"  height="15px" alt="Feedbacks">\
+                  <i id="feedbackCount' + topProfiles[i].ID + j +'"></i>\
+                </h4>\
+                <p class="text_column" id="status' + topProfiles[i].ID + j +'"></p>\
+                <p class="tag" id="hastag' + topProfiles[i].ID + j +'"></p>\
+              </div>');
+            setPostsContent(topProfiles[i].ID, j, false);
+          }
+        },
+        setPostsContent: function(id, j, max) {
+          Promise.resolve()
+          .then(() => {
+            return $.post('/server/getPostsContent.php', {id: id, max: max});
+          })
+          .then((posts) => {
+            var postsContent = posts;
+            $("#link" + id + j).attr('href', '/client/views/postDetails.html?id=' + postsContent[j].ID)
+            $('#thumbnail' + id + j).attr("src","../img/instagram_img/" + postsContent[j].image);
+           
+            var postid = postsContent[j].ID;
+            var likeCountTag = "popularity" + id + j;
+            
+            var likeIconIDTag = "like" + id + j;
+            isLike(postid, likeIconIDTag);
+            
+            $('#like' + id + j).attr('onclick','likeClick("' + postid + '", "' + likeCountTag +'","' + likeIconIDTag + '")');
+            $('#popularity' + id + j).html(postsContent[j].likeCount);
+            $('#feedbackCount' + id + j).html(postsContent[j].feedbackCount);
+            $('#status' + id + j).html(postsContent[j].status);
+            $('#hastag' + id + j).html(postsContent[j].hashTag);
+          });
+        },
+        likeClick: function(id, likeCounttag, likeIconTag) {
+          Promise.resolve()
+          .then(function() {
+              /*here we pass the ID to the incrLike route on the server side so it can do the incrementing for us
+              //note the return. This MUST be here, or the subsequent then will not wait for this to complete */
+             return $.post('/server/server.php', 'type=increLike' + '&id=' + id);
+          })
+          .then(function(like) {
+            if (like.count > 0) {
+              //jQuery provides a nice convenience method for easily setting the count to the value returned
+              $('#' + likeCounttag).html(like.count);
+            }
+            if (like.result) {
+              $('#' + likeIconTag).attr('src','../img/icons/Like.png');
+            }
+            else {
+              $('#' + likeIconTag).attr('src','../img/icons/icon2.png');
+            }
+          })
+          .catch(function(err) {
+              //always include a catch for the promise chain
+          });
+        },
+        isLike: function(postID, likeIconID) {
+            Promise.resolve()
+            .then(function() {
+              return $.post('/server/server.php', 'type=isLike' + '&id=' + postID);
+            })
+            .then(function(resonse) {
+              if(resonse.result) {
+                $('#' + likeIconID).attr("src","../img/icons/Like.png");
+              }
+            })
+          },
+        followerClick: function(followButtonID, followUserID) {
+          Promise.resolve()
+          .then(function(){
+            return $.post('/server/server.php', 'type=incrFollow' + '&followid=' + followUserID);
+          })
+          .then(function(user) {
+            if (user.followingCount > 0) {
+                $('#followingCount').html(user.followingCount);
+            }
+            if (user.result) {
+                $('#' + followButtonID).html('Following');
+            }
+            else {
+                $('#' + followButtonID).html('Follow');
+            }
+          })
+          .catch(function(err) {
+              //always include a catch for the promise chain
+          });
+        },
+        isFollow: function(followButtonID, followUserID) {
+          Promise.resolve()
+          .then(function() {
+            return $.post('/server/server.php', 'type=isFollow' + '&followid=' + followUserID);
+          })
+          // Display as following 
+          .then(function(response){
+            if(response.result) {
+             $('#' + followButtonID).html('Following');
+            }
+          })
+        }
+      }
+    });
+    
+    // Load the contents of the page
+    app.callMethod('loadPage');
+    
+    // Function to set the user profile
+    function setUserProfile(userProfile) {
+      app.callMethod('setUserProfile', [userProfile]);
+    }
+    
+    // Function to add Gallery of user recent post to the Gallery Container
+    function addUserGallery(userProfile, postsCount) {
+      app.callMethod('addUserGallery', [userProfile, postsCount]);
+    }
+    
+    // Function to set content of User Upper Gallery
+    function setUserGalleryContent(userProfile) {
+      app.callMethod('setUserGalleryContent', [userProfile]);
+    }
+    
+    // Function to add user Recent Posts html to Post Container
+    function addUserPosts(userProfile, postsCount) {
+      app.callMethod('addUserPosts', [userProfile, postsCount]);
+    }
+  
+    // Function to set content of Posts
+    function setPostsContent(id, j, check) {
+      app.callMethod('setPostsContent', [id, j, check]);
+    }
+    
+    /*handle a click on the LIKE button we've included with each post
+      we receive the ID of the post as a parameter */
+    function likeClick(id, likeCounttag, likeIconTag) {
+      app.callMethod('likeClick', [id, likeCounttag, likeIconTag]);
+    }
+
+    function isLike(postID, likeIconID) {
+      app.callMethod('isLike', [postID, likeIconID]);
+    }
+    
+    /*handle a click on the Follow button 
+      we receive the ID of user as a parameter */
+    function followerClick(followButtonID, followUserID) {
+      app.callMethod('followerClick', [followButtonID, followUserID]);
+    }
+    
+    // Check whether the user is followed or not in order to display following button
+    function isFollow(followButtonID, followUserID) {
+      app.callMethod('isFollow', [followButtonID, followUserID]);
+    }
+  </script>
   </body>
 </html>
